objects/MarketInfoMarket__c.object
<CustomObject>
    <fields>
        <fullName>AccountManager__c</fullName>
        <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Market_Intelligences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BgClassification__c</fullName>
        <formula>BusinessGroupClassification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BG Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessGroupClassification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group Classification</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value needs to be a Product Business Group</errorMessage>
            <filterItems>
                <field>BusinessGroupClassification__c.Type__c</field>
                <operation>equals</operation>
                <value>Business Group (Product)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessGroupClassification__c</referenceTo>
        <relationshipLabel>Market Info Market</relationshipLabel>
        <relationshipName>Market_Intelligences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>TEXT ( Account__r.ImcdBusinessUnit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>External Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitorAverageSalesPrice__c</fullName>
        <label>Competitor Average Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CompetitorDistributorName__c</fullName>
        <formula>Competitor_Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorProducerName__c</fullName>
        <formula>Competitor_Producer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Producer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct__c</fullName>
        <label>Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorQuanity__c</fullName>
        <label>Competitor Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Distributor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value needs to be of Type Distributor</errorMessage>
            <filterItems>
                <field>Competitor__c.Type__c</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Market Info Market</relationshipLabel>
        <relationshipName>Market_Info_Market_Distributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Producer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value needs to be of Type Producer</errorMessage>
            <filterItems>
                <field>Competitor__c.Type__c</field>
                <operation>equals</operation>
                <value>Producer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Market Info Market (Competitor Producer)</relationshipLabel>
        <relationshipName>Market_Info_Market_Competitor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalComments__c</fullName>
        <label>External Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IMCDCompany__c</fullName>
        <formula>TEXT(Account__r.IMCDCompany__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMCD Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalComments__c</fullName>
        <label>Internal Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <description>Returns the Opportunity Id, if the Lookup is empty it returns &apos;N/A&apos;</description>
        <formula>BLANKVALUE(Opportunity__c,&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Market Info Market</relationshipLabel>
        <relationshipName>Market_Info_Market</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialIsKnown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Is Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryQuoteId__c</fullName>
        <description>Returning &apos;N/A&apos; if the Foreign key cannot be resolved. In this way we force the SOQL to include this field. This is important since in (e.g.) the Create Principal Report flow it needs the PrimaryQuoteId__c if available. But if the field is not part of the sObject SOQL, it would fail.</description>
        <formula>BLANKVALUE(Opportunity__r.SBQQ__PrimaryQuote__c, &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrincipalId__c</fullName>
        <formula>CASESAFEID(Product__r.Principal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrincipalLookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>SFDP-2004
PrincipalLookup__c = Lookup, Princpal__c is formula.</description>
        <label>Principal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Principal Global</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Info Market (Principal)</relationshipLabel>
        <relationshipName>Market_Info_Market</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <formula>IF (
		NOT ( ISBLANK ( Product__c ) )
  , Product__r.PrincipalName__c
		, IF ( 
				NOT ( ISBLANK ( PrincipalLookup__c ) )
				, PrincipalLookup__r.Name
		  , &apos;&apos;
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <formula>Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Market Info Market</relationshipLabel>
        <relationshipName>Market_Info_Market</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TradeGrade__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeName__c</fullName>
        <formula>Product__r.TradeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitofMeasurement__c</fullName>
        <label>Unit of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UnitOfMeasurement</valueSetName>
        </valueSet>
    </fields>
    <label>Market Info Market</label>
    <nameField>
        <displayFormat>MIM-{000000000}</displayFormat>
        <label>Market Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Info Market</pluralLabel>
    <recordTypes>
        <fullName>MarketInfoOngoing</fullName>
        <active>true</active>
        <description>Market Info for ongoing business</description>
        <label>Market Info Ongoing</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarketSurvey</fullName>
        <active>true</active>
        <description>Market Survey for new business</description>
        <label>Market Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>mutualExclusivePrincipalAndProduct</fullName>
        <active>true</active>
        <description>Either should be provided, not both</description>
        <errorConditionFormula>AND (
   $Setup.Global_Bypass_Processes_Settings__c.Run_Validation_Rules__c
   , RecordType.DeveloperName = &apos;MarketInfoOngoing&apos;
   , OR (
							ISBLANK ( Product__c ) &amp;&amp; ISBLANK ( PrincipalLookup__c )
							, NOT ( ISBLANK ( Product__c ) ) &amp;&amp; NOT ( ISBLANK ( PrincipalLookup__c ) )

			)								
)</errorConditionFormula>
        <errorMessage>Either specify a Product or a Principal, but not both.</errorMessage>
    </validationRules>
</CustomObject>